Añado llamada para recibir ultima medición de un usuario
